--- a/.jshintrc
+++ b/.jshintrc
@@ -3,18 +3,18 @@
     "browser":       true,
     "debug":         true,
     "devel":         true,
-    "eqeqeq":        true, 
+    "eqeqeq":        false, 
     "evil":          true,
     "maxparams":     5,
     "maxdepth":      3,
-    "maxstatements": 15,
-    "maxcomplexity": 7,
+    "maxstatements": 40,
+    "maxcomplexity": 15,
     "proto":         true,
     "regexdash":     true,
-    "strict":        true,
+    "strict":        false,
     "sub":           true,
     "trailing":      true,
-    "undef":         true,
+    "undef":         false,
 
     "predef"     : [
         "exports",
