--- a/.jshintrc
+++ b/.jshintrc
@@ -15,7 +15,7 @@
 	"scripturl":     true,
     "sub":           true,
     "trailing":      true,
-    "undef":         false,
+    "undef":         true,
 
     "predef"     : [
         "exports",
