--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"grunt": "0.4.5",
 		"grunt-contrib-jshint": "0.10.0",
 		"grunt-lint5": "0.3.0",
+		"grunt-contrib-compress": "0.10.0",
 		"grunt-contrib-jasmine": "git://github.com/travisjeffery/grunt-contrib-jasmine#9d5874dd592cf41e8268918fe9baeb261afd75b2"
 	}
 }
