--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"license": "LGPL",
 	"devDependencies": {
 		"grunt": "0.4.5",
+		"grunt-markdown": "0.6.1",
 		"grunt-contrib-jshint": "0.10.0",
 		"grunt-lint5": "0.3.0",
 		"grunt-contrib-compress": "0.10.0",
